--- a/pnote/note1.qmd
+++ b/pnote/note1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Note1"
+title: "Personal Note"
 editor: visual
 date:  2 Jan 2022
 code-copy: true
@@ -16,23 +16,25 @@ format:
 
 cv = continuous variables
 
-+-------------+-------------------------------+-----------------+--------------------+
-| chart       | usage                         | measure / param | remark / attention |
-+=============+===============================+=================+====================+
-|             |                               |                 |                    |
-+-------------+-------------------------------+-----------------+--------------------+
-| Histogram   | frequency of bins of value    | -   mean        |                    |
-|             |                               |                 |                    |
-|             | cv = probability distribution | -   median      |                    |
-|             |                               |                 |                    |
-|             |                               | -   mode        |                    |
-+-------------+-------------------------------+-----------------+--------------------+
-| Box plot    |                               |                 |                    |
-+-------------+-------------------------------+-----------------+--------------------+
-| Correlogram | reveal multicollinearity.     |                 |                    |
-+-------------+-------------------------------+-----------------+--------------------+
-|             |                               |                 |                    |
-+-------------+-------------------------------+-----------------+--------------------+
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
+| chart                 | usage                                                                 | measure / param | remark / attention |
++=======================+=======================================================================+=================+====================+
+|                       |                                                                       |                 |                    |
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
+| Histogram             | frequency of bins of value                                            | -   mean        |                    |
+|                       |                                                                       |                 |                    |
+|                       | cv = probability distribution                                         | -   median      |                    |
+|                       |                                                                       |                 |                    |
+|                       |                                                                       | -   mode        |                    |
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
+| Box plot              | http://www.sthda.com/english/wiki/box-plots-r-base-graphs             |                 |                    |
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
+| Scatter Plot Matrices | http://www.sthda.com/english/wiki/scatter-plot-matrices-r-base-graphs |                 |                    |
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
+| Correlogram           | reveal multicollinearity.                                             |                 |                    |
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
+| Horizon chart         | Spot general trends and identify extreme values.                      |                 |                    |
++-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
 
 +-------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------+
 | understand distribution | measure                                                                                                                                                       | remark / note                                                                          |
@@ -78,24 +80,24 @@ Definition :
 
 [^1]: Shaun T. (2022). What Is Kurtosis? \| Definition, Examples & Formula. Scribbr. https://www.scribbr.com/statistics/kurtosis/#:\~:text=Kurtosis%20is%20a%20measure%20of,(thin%20tails)%20are%20platykurtic.
 
-+-------------------------+------------------------------+----------------------+------+------+
-| topic                   | measure / parameter / aspect | Col3                 | Col4 | Col5 |
-+=========================+==============================+======================+======+======+
-| population distribution | total population             | absolute, percentage |      |      |
-|                         |                              |                      |      |      |
-|                         | young population             |                      |      |      |
-|                         |                              |                      |      |      |
-|                         | elderly population           |                      |      |      |
-|                         |                              |                      |      |      |
-|                         | working age population       |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
-|                         |                              |                      |      |      |
-+-------------------------+------------------------------+----------------------+------+------+
++-------------------------+------------------------------+----------------------+------------+------------+
+| topic                   | measure / parameter / aspect | Col3                 | Col4       | Col5       |
++=========================+==============================+======================+============+============+
+| population distribution | total population             | absolute, percentage |            |            |
+|                         |                              |                      |            |            |
+|                         | young population             |                      |            |            |
+|                         |                              |                      |            |            |
+|                         | elderly population           |                      |            |            |
+|                         |                              |                      |            |            |
+|                         | working age population       |                      |            |            |
++-------------------------+------------------------------+----------------------+------------+------------+
+|                         |                              |                      |            |            |
++-------------------------+------------------------------+----------------------+------------+------------+
+|                         |                              |                      |            |            |
++-------------------------+------------------------------+----------------------+------------+------------+
+|                         |                              |                      |            |            |
++-------------------------+------------------------------+----------------------+------------+------------+
+|                         |                              |                      |            |            |
++-------------------------+------------------------------+----------------------+------------+------------+
+|                         |                              |                      |            |            |
++-------------------------+------------------------------+----------------------+------------+------------+
