test boxplot with geospatial data

--- a/pnote/note1.qmd
+++ b/pnote/note1.qmd
@@ -16,25 +16,35 @@ format:
 
 cv = continuous variables
 
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
-| chart                 | usage                                                                 | measure / param | remark / attention |
-+=======================+=======================================================================+=================+====================+
-|                       |                                                                       |                 |                    |
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
-| Histogram             | frequency of bins of value                                            | -   mean        |                    |
-|                       |                                                                       |                 |                    |
-|                       | cv = probability distribution                                         | -   median      |                    |
-|                       |                                                                       |                 |                    |
-|                       |                                                                       | -   mode        |                    |
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
-| Box plot              | http://www.sthda.com/english/wiki/box-plots-r-base-graphs             |                 |                    |
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
-| Scatter Plot Matrices | http://www.sthda.com/english/wiki/scatter-plot-matrices-r-base-graphs |                 |                    |
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
-| Correlogram           | reveal multicollinearity.                                             |                 |                    |
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
-| Horizon chart         | Spot general trends and identify extreme values.                      |                 |                    |
-+-----------------------+-----------------------------------------------------------------------+-----------------+--------------------+
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| chart                 | usage                                                                         | measure / param | remark / attention                            |
++=======================+===============================================================================+=================+===============================================+
+| Bar                   | quick comparison btw categories and trends.                                   |                 | useful when data can split into multiple bins |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Line                  | quick view data trends over a period of time.                                 |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Histogram             | frequency of bins of value                                                    | -   mean        |                                               |
+|                       |                                                                               |                 |                                               |
+|                       | cv = probability distribution                                                 | -   median      |                                               |
+|                       |                                                                               |                 |                                               |
+|                       |                                                                               | -   mode        |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Box plot              | http://www.sthda.com/english/wiki/box-plots-r-base-graphs                     |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Scatter Plot          | reveal the relationship btw variables.                                        |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Scatter Plot Matrices |                                                                               |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Correlogram           | reveal multicollinearity.                                                     |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Horizon chart         | Spot general trends and identify extreme values.                              |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Density Map           | reveal patterns or relative concentration within a small geographic area.[^1] |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+| Others                | Gantt chat, bubble chart,                                                     |                 |                                               |
++-----------------------+-------------------------------------------------------------------------------+-----------------+-----------------------------------------------+
+
+[^1]: Tracy R. (N.A.). Which Type of Chart or Graph is Right for You? Tableau. https://www.tableau.com/learn/whitepapers/which-chart-or-graph-is-right-for-you
 
 +-------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------+
 | understand distribution | measure                                                                                                                                                       | remark / note                                                                          |
@@ -76,9 +86,9 @@ Definition :
 | Excess kurtosis      | 0             | Negative    | Positive    |
 | Example distribution | Normal        | Uniform     | Laplace     |
 
-: **3 Types of Kurtosis**[^1]
+: **3 Types of Kurtosis**[^2]
 
-[^1]: Shaun T. (2022). What Is Kurtosis? \| Definition, Examples & Formula. Scribbr. https://www.scribbr.com/statistics/kurtosis/#:\~:text=Kurtosis%20is%20a%20measure%20of,(thin%20tails)%20are%20platykurtic.
+[^2]: Shaun T. (2022). What Is Kurtosis? \| Definition, Examples & Formula. Scribbr. https://www.scribbr.com/statistics/kurtosis/#:\~:text=Kurtosis%20is%20a%20measure%20of,(thin%20tails)%20are%20platykurtic.
 
 +-------------------------+------------------------------+----------------------+------------+------------+
 | topic                   | measure / parameter / aspect | Col3                 | Col4       | Col5       |
